error fixes